# kvlens

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
examples/: gen_demo_trace.py  trace.sample.json
scripts/: check_no_leak.py
src/kvlens/: __init__.py  capture.py  cli.py  engine.py  events.py  scrub.py  server.py  traces.py  tree.py
tests/: test_traces.py  test_tree.py
web/: app.js  index.html  kv_events.json  kv_events.sample.json  kv_events_edge.json  palette.js  run.json  run.sample.json  style.css  transport.js  tree.css  tree.html  tree.js  util.js
